--- a/DragWidgets/DragWidgets.Web/Pages/_ViewImports.cshtml
+++ b/DragWidgets/DragWidgets.Web/Pages/_ViewImports.cshtml
@@ -1,4 +1,3 @@
-﻿@using DragWidgets
-@namespace DragWidgets.Pages
+﻿@namespace DragWidgets.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, DragWidgets
