--- a/Tuxbar/Tuxbar.Web/Pages/_ViewImports.cshtml
+++ b/Tuxbar/Tuxbar.Web/Pages/_ViewImports.cshtml
@@ -1,4 +1,3 @@
-﻿@using TuxbarExample
-@namespace TuxbarExample.Pages
+﻿@namespace Tuxbar.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, TuxbarExample
