--- a/DragWidgets/DragWidgets.Web/Pages/_ViewImports.cshtml
+++ b/DragWidgets/DragWidgets.Web/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@namespace DragWidgets.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *, DragWidgets
+@addTagHelper *, DragWidgets.Web
