Drag and save widgets

--- a/03-DragWidgets/Pages/Shared/Components/WidgetTemplate/Default.cshtml
+++ b/03-DragWidgets/Pages/Shared/Components/WidgetTemplate/Default.cshtml
@@ -4,7 +4,7 @@
 {
     <!-- Widgets -->
     <div class="card @(Model.Collapsed ? "collapsed" : string.Empty)"
-         data-id="Model.WidgetPlacementId" draggable="true">
+         data-id="@Model.WidgetPlacementId" draggable="true">
 
         <div class="card-header">
             @Model.GetSettingValueByName("widgettitle")
