--- a/03-DragWidgets/Pages/_ViewImports.cshtml
+++ b/03-DragWidgets/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@namespace DragWidgets.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *, 03-DragWidgets.Web
+@addTagHelper *, 03-DragWidgets
