--- a/05-Layout-1/wwwroot/scss/tuxboard.scss
+++ b/05-Layout-1/wwwroot/scss/tuxboard.scss
@@ -70,3 +70,53 @@ body {
     margin-bottom: 15px;
     margin-top: 15px
 }
+
+/* Simple Layout Dialog */
+
+.layout-list * {
+    margin: 0;
+    padding: 0;
+}
+
+.layout-list {
+
+    li {
+        margin-bottom: 10px;
+        list-style: none;
+        display: inline;
+        float: left;
+        margin-right: 15px;
+        font-size: 10px;
+        padding: 10px;
+        border: 1px solid #DDD;
+
+        &:hover {
+            background-color: #EDEDED;
+            cursor: pointer
+        }
+
+        &.selected {
+            background-color: #D1E8FC
+        }
+
+        > .preview-table {
+            display: table;
+            width: 125px;
+            border-collapse: collapse;
+            margin: 0 auto;
+
+            > .preview-row {
+                border: 1px solid #777;
+                display: table-row-group;
+
+                div {
+                    background-color: #999;
+                    height: 80px;
+                    color: #FFF;
+                    display: table-cell;
+                    border: 1px solid #CCC;
+                }
+            }
+        }
+    }
+}
