Add SimpleLayoutDialog w/ Tuxbar button

--- a/05-Layout-1/Pages/Shared/Components/Tuxbar/Default.cshtml
+++ b/05-Layout-1/Pages/Shared/Components/Tuxbar/Default.cshtml
@@ -6,6 +6,9 @@
             <button type="button" id="refresh-button" title="Refresh" class="btn btn-outline-secondary">
                 <i class="fa fa-arrows-rotate"></i>
             </button>
+            <button type="button" id="layout-button" title="Refresh" class="btn btn-outline-secondary">
+                <i class="fa fa-table-columns"></i>
+            </button>
         </div>
         <div class="btn-group btn-group-sm mx-2">
             <span id="tuxbar-status"></span>
