--- a/05-Layout-1/Pages/Index.cshtml
+++ b/05-Layout-1/Pages/Index.cshtml
@@ -12,17 +12,14 @@
 <div class="modal fade" id="layout-dialog" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
-            <div class="overlay w-100 h-100">
-                <div class="h-100 justify-content-center">
-                    <i class="fas fa-spinner fa-spin fa-2x"></i>
-                </div>
-            </div>
-
             <div class="modal-header">
                 <h5 class="modal-title">Change Layout</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
+                <div class="h-100 justify-content-center text-center">
+                    <i class="fas fa-spinner fa-spin fa-2x"></i>
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-sm btn-primary save-layout">Save Layout</button>
