--- a/05-Layout-1/Pages/Shared/Components/Tuxbar/Default.cshtml
+++ b/05-Layout-1/Pages/Shared/Components/Tuxbar/Default.cshtml
@@ -6,7 +6,7 @@
             <button type="button" id="refresh-button" title="Refresh" class="btn btn-outline-secondary">
                 <i class="fa fa-arrows-rotate"></i>
             </button>
-            <button type="button" id="layout-button" title="Refresh" class="btn btn-outline-secondary">
+            <button type="button" id="layout-button" title="Change Layout (simple)" class="btn btn-outline-secondary">
                 <i class="fa fa-table-columns"></i>
             </button>
         </div>
