--- a/02-WidgetsExample/Pages/_ViewImports.cshtml
+++ b/02-WidgetsExample/Pages/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using WidgetsExample
 @namespace WidgetsExample.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *, WidgetsExample
+@addTagHelper *, 02-WidgetsExample
