--- a/05-Layout-1/Pages/Shared/_Layout.cshtml
+++ b/05-Layout-1/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Layout</title>
+    <title>@ViewData["Title"] - Simple Layout Dialog</title>
     <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/lib/fontawesome/css/all.min.css" />
     <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Layout</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">Simple Layout Dialog</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -38,7 +38,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - Tuxboard Layouts - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2024 - Simple Layout Dialog - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
