--- a/07-Add-Widgets/Pages/Shared/Components/Tuxbar/Default.cshtml
+++ b/07-Add-Widgets/Pages/Shared/Components/Tuxbar/Default.cshtml
@@ -6,6 +6,11 @@
             <button type="button" id="refresh-button" title="Refresh" class="btn btn-outline-secondary">
                 <i class="fa fa-arrows-rotate"></i>
             </button>
+            <button type="button" id="add-widget-button" title="Add Widget" class="btn btn-outline-secondary">
+                <i class="fa-regular fa-square-plus"></i>
+            </button>
+        </div>
+        <div class="btn-group btn-group-sm">
             <button type="button" id="layout-button" title="Change Layout (simple)" class="btn btn-outline-secondary">
                 <i class="fa fa-table-columns"></i>
             </button>
