--- a/07-Add-Widgets/Pages/Index.cshtml
+++ b/07-Add-Widgets/Pages/Index.cshtml
@@ -56,3 +56,24 @@
         </div>
     </div>
 </div>
+
+<!-- Add Widget -->
+<div class="modal fade" id="add-widget-dialog" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Add Widget</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="h-100 justify-content-center text-center">
+                    <i class="fas fa-spinner fa-spin fa-2x"></i>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-sm btn-primary add-widget">Add Widget</button>
+                <button type="button" class="btn btn-sm btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
