--- a/07-Add-Widgets/Pages/Index.cshtml
+++ b/07-Add-Widgets/Pages/Index.cshtml
@@ -59,7 +59,7 @@
 
 <!-- Add Widget -->
 <div class="modal fade" id="add-widget-dialog" tabindex="-1" role="dialog">
-    <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Add Widget</h5>
