Cleaning up Delete Widget functionality

--- a/08-Widget-Toolbar/Pages/Shared/Components/WidgetTemplate/Default.cshtml
+++ b/08-Widget-Toolbar/Pages/Shared/Components/WidgetTemplate/Default.cshtml
@@ -9,7 +9,9 @@
         <div class="card-header d-flex">
             <small>@Model.GetSettingValueByName("widgettitle")</small>
             <div class="widget-toolbar d-flex ms-auto">
-                <button type="button" class="btn btn-sm remove-widget p-0"><i class="fa-solid fa-xmark"></i></button>
+                <button type="button" class="btn btn-sm remove-widget p-0">
+                    <i class="fa-solid fa-xmark"></i>
+                </button>
             </div>
         </div>
 
