--- a/08-Widget-Toolbar/wwwroot/scss/tuxboard.scss
+++ b/08-Widget-Toolbar/wwwroot/scss/tuxboard.scss
@@ -201,3 +201,8 @@ $rowLayoutDialog-placeholder-color: #eacece;
         }
     }
 }
+
+/* Remove dropdown caret */
+.card-header .dropdown-toggle::after {
+    content: none;
+} 
