--- a/08-Widget-Toolbar/Pages/Shared/Components/WidgetTemplate/Default.cshtml
+++ b/08-Widget-Toolbar/Pages/Shared/Components/WidgetTemplate/Default.cshtml
@@ -1,40 +1,50 @@
 ﻿@model Tuxboard.Core.Domain.Entities.WidgetPlacement
 
-@if (Model.UseTemplate)
-{
-    <!-- Widgets -->
-    <div class="card mb-3@(Model.Collapsed ? " collapsed" : string.Empty)"
-         data-id="@Model.WidgetPlacementId" draggable="true">
+<!-- Widgets -->
+<div condition="Model.UseTemplate" class="card mb-3 @(Model.Collapsed ? "collapsed": string.Empty)"
+     data-id="@Model.WidgetPlacementId" draggable="true">
 
-        <div class="card-header d-flex">
-            <small>@Model.GetSettingValueByName("widgettitle")</small>
-            <div class="widget-toolbar d-flex ms-auto">
-                @*
-                <!-- Approach 1 -->
-                <button type="button" class="btn btn-sm remove-widget p-0">
-                    <i class="fa-solid fa-xmark"></i>
+    <div class="card-header d-flex">
+        <small>@Model.GetSettingValueByName("widgettitle")</small>
+        <div class="widget-toolbar d-flex ms-auto">
+            <button condition="!Model.Collapsed" type="button" 
+                    class="btn btn-sm widget-state p-0" title="Minimize">
+                <i class="fa-solid fa-window-minimize"></i>
+            </button>
+            <button condition="Model.Collapsed" type="button" 
+                    class="btn btn-sm widget-state p-0" title="Restore">
+                <i class="fa-regular fa-window-maximize"></i>
+            </button>
+            @*
+            <!-- Approach 1 -->
+            <button type="button" class="btn btn-sm remove-widget p-0" title="Remove Widget">
+            <i class="fa-solid fa-xmark"></i>
+            </button>
+            *@
+            <!-- Approach 2 -->
+            <div class="dropdown">
+                <button class="btn btn-sm px-1 p-0 dropdown-toggle" role="button" data-bs-toggle="dropdown"
+                        type="button" aria-expanded="false" title="Widget Options">
+                    <i class="fa-solid fa-ellipsis"></i>
                 </button>
-                *@
-                <!-- Approach 2 -->
-                <div class="dropdown">
-                    <button class="btn btn-sm p-0 dropdown-toggle" role="button" data-bs-toggle="dropdown" 
-                            type="button" aria-expanded="false">
-                        <i class="fa-solid fa-ellipsis"></i>
-                    </button>
-                    <ul class="dropdown-menu dropdown-menu-end">
-                        <li><button class="dropdown-item remove-widget" type="button">Remove</button></li>
-                    </ul>
-                </div>
+                <ul class="dropdown-menu dropdown-menu-end">
+                    <li>
+                        <button class="dropdown-item remove-widget btn btn-sm" type="button">
+                            <small>Remove</small>
+                        </button>
+                    </li>
+                </ul>
             </div>
         </div>
-
-        <div class="card-body">
-            @await Component.InvokeAsync(Model.Widget.Name, Model)
-        </div>
-
     </div>
-}
-else
+
+    <div class="card-body">
+        @await Component.InvokeAsync(Model.Widget.Name, Model)
+    </div>
+
+</div>
+
+@if (!Model.UseTemplate)
 {
     @await Component.InvokeAsync(Model.Widget.Name, Model)
 }
