--- a/10-Default-Dashboards/Pages/_ViewImports.cshtml
+++ b/10-Default-Dashboards/Pages/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using DefaultDashboards
+@using DefaultDashboards.Data
 @namespace DefaultDashboards.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, 10-Default-Dashboards
