--- a/10-Default-Dashboards/Pages/Shared/_LoginPartial.cshtml
+++ b/10-Default-Dashboards/Pages/Shared/_LoginPartial.cshtml
@@ -1,6 +1,7 @@
-﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+﻿@using DefaultDashboards.Identity
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@inject SignInManager<DashboardUser> SignInManager
+@inject UserManager<DashboardUser> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
