Added WidgetRole entity w/ table and service

--- a/11-Default-Widgets/Pages/Shared/_LoginPartial.cshtml
+++ b/11-Default-Widgets/Pages/Shared/_LoginPartial.cshtml
@@ -1,4 +1,6 @@
-﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using DefaultWidgets.Identity
+@using Microsoft.AspNetCore.Identity
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @inject SignInManager<TuxboardUser> SignInManager
 @inject UserManager<TuxboardUser> UserManager
 
