--- a/11-Default-Widgets/Pages/_ViewImports.cshtml
+++ b/11-Default-Widgets/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@namespace DefaultWidgets.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *, 10-Default-Dashboards
+@addTagHelper *, 11-Default-Widgets
