Update to Tuxboard 1.7.3

--- a/01-SimpleDashboard/Pages/Index.cshtml
+++ b/01-SimpleDashboard/Pages/Index.cshtml
@@ -32,7 +32,7 @@
                                          data-id="@wp.WidgetPlacementId">
 
                                         <div class="card-header">
-                                            @wp.GetSettingValueByName("widgettitle")
+                                            @wp.GetSettingOrDefault("widgettitle")
                                         </div>
 
                                         <div class="card-body">
