--- a/02-WidgetsExample/Pages/Shared/Components/WidgetTemplate/Default.cshtml
+++ b/02-WidgetsExample/Pages/Shared/Components/WidgetTemplate/Default.cshtml
@@ -6,7 +6,7 @@
     <div class="card mb-3" data-id="Model.WidgetPlacementId">
 
         <div class="card-header">
-            @Model.GetSettingValueByName("widgettitle")
+            @Model.GetSettingOrDefault("widgettitle")
         </div>
 
         <div class="card-body">
