--- a/12-Creating-Widgets/Pages/Shared/_LoginPartial.cshtml
+++ b/12-Creating-Widgets/Pages/Shared/_LoginPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@using DefaultWidgets.Identity
+﻿@using CreatingWidgets.Identity
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @inject SignInManager<TuxboardUser> SignInManager
