--- a/12-Creating-Widgets/Pages/_ViewImports.cshtml
+++ b/12-Creating-Widgets/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@namespace DefaultWidgets.Pages
+﻿@namespace CreatingWidgets.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, 12-Creating-Widgets
