--- a/01-SimpleDashboard/Pages/_ViewImports.cshtml
+++ b/01-SimpleDashboard/Pages/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SimpleDashboard
 @namespace SimpleDashboard.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, 01-SimpleDashboard
