Remove JavaScript files

--- a/12-Creating-Widgets/Pages/Shared/Components/Rss/Default.cshtml
+++ b/12-Creating-Widgets/Pages/Shared/Components/Rss/Default.cshtml
@@ -6,7 +6,10 @@
     {
         <li>
             <p>
-                <a href="@feedItem.Links.First().Uri.ToString()" class="fw-bold">@feedItem.Title.Text</a><br />
+                <a href="@feedItem.Links.First().Uri.ToString()"
+                   class="fw-bold">
+                    @feedItem.Title.Text
+                </a><br />
                 @feedItem.Summary.Text
             </p>
         </li>
