--- a/08-Widget-Toolbar/Pages/Shared/Components/Tuxbar/Default.cshtml
+++ b/08-Widget-Toolbar/Pages/Shared/Components/Tuxbar/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model Tuxboard.Core.Domain.Entities.Dashboard
+﻿@model Tuxboard.Core.Domain.Entities.Dashboard<Guid>
 
 <div class="tuxbar btn-toolbar border border-1 bg-light p-1 mb-3 justify-content-between" role="toolbar" aria-label="Tuxbar for Tuxboard">
     <form>
