--- a/13-Async-Widgets/Pages/Shared/Components/TuxboardTemplate/Default.cshtml
+++ b/13-Async-Widgets/Pages/Shared/Components/TuxboardTemplate/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model Tuxboard.Core.Domain.Entities.Dashboard
+﻿@model Tuxboard.Core.Domain.Entities.Dashboard<Guid>
 
 <section class="dashboard" id="Model.DashboardId">
     @foreach (var tab in Model.Tabs)
