--- a/13-Async-Widgets/Pages/Shared/Components/WidgetTemplate/Default.cshtml
+++ b/13-Async-Widgets/Pages/Shared/Components/WidgetTemplate/Default.cshtml
@@ -4,7 +4,7 @@
 <div condition="Model.UseTemplate" class="card mb-3 @(Model.Collapsed ? "collapsed": string.Empty)"
      data-id="@Model.WidgetPlacementId" draggable="true">
 
-    <div class="card-header d-flex">
+    <div class="card-header d-flex" hidden>
         <small class="widget-title">@Model.GetSettingOrDefault("widgettitle")</small>
         <div class="widget-toolbar d-flex ms-auto">
             <button condition="!Model.Collapsed" type="button"
@@ -38,11 +38,14 @@
         </div>
     </div>
 
-    <div class="card-body">
-        <div>
-             @await Component.InvokeAsync(Model.Widget.Name, Model)
+    <div class="card-body"></div>
+
+    <div class="overlay">
+        <div class="align-middle p-3">
+            <p class="text-center"><i class="fa-solid fa-2x fa-circle-notch fa-spin"></i></p>
         </div>
     </div>
+
 
 </div>
 
