--- a/13-Async-Widgets/Pages/_ViewImports.cshtml
+++ b/13-Async-Widgets/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@namespace AsyncWidgets.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *, 12-Creating-Widgets
+@addTagHelper *, 13-Async-Widgets
