--- a/13-Async-Widgets/Pages/Shared/Components/WidgetTemplate/Default.cshtml
+++ b/13-Async-Widgets/Pages/Shared/Components/WidgetTemplate/Default.cshtml
@@ -4,7 +4,7 @@
 <div condition="Model.UseTemplate" class="card mb-3 @(Model.Collapsed ? "collapsed": string.Empty)"
      data-id="@Model.WidgetPlacementId" draggable="true">
 
-    <div class="card-header d-flex" hidden>
+    <div class="card-header d-none">
         <small class="widget-title">@Model.GetSettingOrDefault("widgettitle")</small>
         <div class="widget-toolbar d-flex ms-auto">
             <button condition="!Model.Collapsed" type="button"
@@ -42,7 +42,7 @@
 
     <div class="overlay">
         <div class="align-middle p-3">
-            <p class="text-center"><i class="fa-solid fa-2x fa-circle-notch fa-spin"></i></p>
+            <p class="text-center m-0"><i class="fa-solid fa-2x fa-circle-notch fa-spin"></i></p>
         </div>
     </div>
 
